--- a/IsuruDhanisha-COBSCCOMP192P-037/Base.lproj/LaunchScreen.storyboard
+++ b/IsuruDhanisha-COBSCCOMP192P-037/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina3_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,24 +13,25 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FlashSceenIcon" translatesAutoresizingMaskIntoConstraints="NO" id="O1U-2R-LK9">
-                                <rect key="frame" x="105" y="123" width="111" height="109"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cafe NIBM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yJV-Gp-nAt">
-                                <rect key="frame" x="110" y="232" width="128" height="36"/>
+                                <rect key="frame" x="79" y="320" width="256" height="256"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="dW1-jS-TId"/>
+                                    <constraint firstAttribute="width" constant="256" id="FVw-Ma-lkO"/>
+                                    <constraint firstAttribute="height" constant="256" id="p1I-Ih-CJc"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powerd By NIBM Computing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kvi-Rs-c4b">
+                                <rect key="frame" x="133.5" y="818" width="147" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powerd By NIBM Computing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kvi-Rs-c4b">
-                                <rect key="frame" x="86" y="438" width="148" height="14"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cafe NIBM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yJV-Gp-nAt">
+                                <rect key="frame" x="153" y="586" width="108.5" height="26.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -38,26 +39,22 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="O1U-2R-LK9" secondAttribute="trailing" constant="104" id="6al-nx-yme"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="yJV-Gp-nAt" secondAttribute="bottom" constant="212" id="A4e-tu-vWu"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yJV-Gp-nAt" secondAttribute="trailing" constant="82" id="AR0-gk-omO"/>
-                            <constraint firstItem="Kvi-Rs-c4b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="86" id="Ik9-u0-O2L"/>
-                            <constraint firstItem="O1U-2R-LK9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="123" id="QUm-9m-530"/>
-                            <constraint firstItem="O1U-2R-LK9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="105" id="SI5-3V-tuq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Kvi-Rs-c4b" secondAttribute="trailing" constant="86" id="bRB-YQ-eQU"/>
-                            <constraint firstItem="yJV-Gp-nAt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="110" id="gxa-9C-joU"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Kvi-Rs-c4b" secondAttribute="bottom" constant="28" id="hkz-vH-Xl8"/>
-                            <constraint firstItem="yJV-Gp-nAt" firstAttribute="top" secondItem="O1U-2R-LK9" secondAttribute="bottom" id="oOg-AI-0tz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Kvi-Rs-c4b" secondAttribute="bottom" constant="30" id="0K3-YF-rIa"/>
+                            <constraint firstItem="yJV-Gp-nAt" firstAttribute="top" secondItem="O1U-2R-LK9" secondAttribute="bottom" constant="10" id="8cr-jO-Zld"/>
+                            <constraint firstItem="yJV-Gp-nAt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EmV-53-Rm9"/>
+                            <constraint firstItem="O1U-2R-LK9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="JYz-1v-6s1"/>
+                            <constraint firstItem="Kvi-Rs-c4b" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Mnn-vG-WoN"/>
+                            <constraint firstItem="O1U-2R-LK9" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="S6r-KJ-0yY"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="50.625" y="375"/>
+            <point key="canvasLocation" x="49.275362318840585" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="FlashSceenIcon" width="512" height="512"/>
+        <image name="FlashSceenIcon" width="256" height="256"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
